# Recon_Clustering

./: .gitignore  LICENSE  README.md  example_graph.py  graph_solver.py  grapher.py  main.py  process.ipynb  pyproject.toml  requirement.txt
RhinoGH/: GenerativeReconSlabs-QuadTreeSubD.gh  Recon_Clustering.gh
assemblies/: ReconSlab.gml  ReconSlab_Top-Connectivity.csv  Singularity.gml  example_graph.py  exception.gml  exception2.gml  extended.gml  extended_scc.dot  no_rdg.gml  recursive.dot  simple.dot  simple.gml
exports/: .~lock.export-layers.csv#  01-dep.gexf  dep.gexf  export-clusters-conns.csv  export-clusters-parts.csv  export-clusters.csv  export-components.csv  export-gantt.csv  export-layers.csv  export-stage_gantt.csv
io_utils/: file_writer.py  graph_generator.py  graph_visualizer.py
src/: main.py
src/graph_solver/: graph_solver.py
src/io_utils/: __init__.py  file_writer.py
src/recongraph/: __init__.py
src/recongraph/io_utils/: __init__.py  file_writer.py  graph_generator.py  graph_parser.py  graph_visualizer.py
src/recongraph/processors/: disassembly.py  graph_parser.py  graph_solver.py
src/recongraph/visualizer/: graph_visualizer.py  graphviz_utils.py
