[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spam-eggs"
version = "2020.0.0"
dependencies = [
  "networkx",
  "matplotlib",
]
requires-python = ">=3.8"
authors = [
  {name = "Ardeshir Talaei", email = "ardeshir.talaei@gmail.com"},
]
description = "Lovely Spam! Wonderful Spam!"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
  "Programming Language :: Python"
]

[project.optional-dependencies]
viz = ["pygraphviz"]

[project.urls]
Repository = "https://github.com/me/spam.git"

[project.entry-points."spam.magical"]
tomatoes = "spam:main_tomatoes"