[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "recongraph"
version = "0.0.1"
dependencies = [
  "networkx",
  "matplotlib",
  "scipy"
]
requires-python = ">=3.8"
authors = [
  {name = "Ardeshir Talaei", email = "ardeshir.talaei@gmail.com"},
]
description = "A graph-based solution for sequencing assembly operations"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
  "Programming Language :: Python"
]

[project.optional-dependencies]
viz = ["pygraphviz"]

[project.urls]
Repository = "https://github.com/ArdooTala/Recon_Clustering.git"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["main.py"]

[tool.setuptools.package-data]
"recongraph.io_utils" = ["inkscape_template.svg"]